--- a/index.html
+++ b/index.html
@@ -1,1 +1,83 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Piotr Bródka Szkoła Programowania</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+</head>
+<body>
+	<main>
+		<section id="hero" class="jumbotron">
+			<div class="container">
+                <div class="row">
+                    <div class="col-md-8">
+                        <h3 class="display-4">Czy wiesz, że programowanie to w obecnych czasach klucz do przyszłości?</h3>
+				        <p class="lead">Dzisiaj, w erze sztucznej inteligencji, nauka programowania staje się coraz bardziej ważna. Wraz ze wzrostem popularności narzędzi takich jak GPT, osoby nieznające się na AI nie będą w stanie w przyszłości skutecznie konkurować na rynku pracy. Uważam, że nie można tego przegapić. Rodzicu - daj swojemu dziecku szansę na wejście do tego świata.</p>
+                        <p class="lead">Nazywam się Piotr Bródka i uczę młodzież programowania oraz sztucznej inteligencji. Dzięki temu, Twoje dziecko stanie się gotowe na wyzwania przyszłości, które czekają w branży IT.</p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/piotrbrodka_profile.jpg" alt="Profile Picture" class="img-fluid">
+                    </div>
+                </div>
+			</div>
+		</section>
+		<section id="courses" class="container">
+			<h2 class="mb-4">Kursy</h2>
+			<p></p>
+			<div class="row">
+				<div class="col-md-6">
+					<div class="card mb-4">
+						<div class="card-body">
+							<h3 class="card-title">Basics - Programowanie w Pythonie</h3>
+							<p class="card-text">Uczymy się podstaw Pythona, kończymy projektem - będzie to samodzielne napisanie gry komputerowej. Po każdym spotkaniu prace domowe. Dodatkowo jest stały dostęp do grupy na Discordzie, gdzie możesz pytać o wszystko dotyczące napotkanych przez Ciebie problemów. Cel to opanowanie podstaw Pythona i programowania.</p>
+							<p class="card-text">Szczegółowy plan znajdziesz <a href="https://brodka.notion.site/Kurs-Programowania-w-Pythonie-plan-1daada7d8f3f4982829ab143084b77c8">tutaj</a>. Kurs trwa 8 tygodni (wersja wakacyjna 4 tygodnie, po 2 spotkania tygodniowo)</p>
+							<p class="card-text">Cena: 1499zł</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="card mb-4">
+						<div class="card-body">
+							<h3 class="card-title">Level UP - Artifficial Intelligence</h3>
+							<p class="card-text">Kurs dla osób które opanowały podstawy Pythona i chcą podążać za najnowszymi tredami. Ten kurs jest megapraktyczny. W programie projekty takie jak: rozpoznawania obiektów na zdjęciach za pomocą sieci neuronowych, granie w gry komputerowe za pomocą AI, a także podstawy działania modeli tekstowych (takich jak GPT4).
+
+							<p class="card-text">Szczegółowy plan znajdziesz <a href="https://brodka.notion.site/Level-UP-Artifficial-Intelligence-26d5a992c954463cb78858241fc889de">tutaj</a>. Kurs trwa 12 tygodni (wersja wakacyjna 6 tygodnii, po 2 spotkania tygodniowo)</p>
+							<p class="card-text">Cena: 1999zł</p>
+
+						</div>
+					</div>
+				</div>
+			</div>
+			<p>Kursy odbywają się online w małych grupach (do 6 osób). W cenie zawiera się:
+				<ul>
+					<li>zbiór materiałów dydaktycznych</li>
+					<li>mentoring dotyczący wykonywanego przez Ciebie projektu</li>
+					<li>dostęp do grupy na Discordzie, gdzie w każdej chwili możesz mnie pytać o cokolwiek</li>
+					<li>na koniec kursu - indywidualny plan dalszego rozwoju</li>
+				</ul>
+			</p>
+
+			<p>
+				Podczas kursu daję na bieżąco feedback Pod koniec kursu przedstawię Ci plan dalszego rozwoju, biorąc pod uwagę Twoje umiejętności.
+			</p>
+		</div>
+	</section>
+	<section id="about" class="bg-light py-5">
+		<div class="container">
+			<h2 class="mb-4">Jakieś pytania?</h2>
+			<p>Jeśli masz wątpliwości który kurs jest odpowiedni dla Twojego dziecka, chętnie doradzę.</p>
+			<p>kontakt: 607543635, piotrbrodka95@gmail.com</p>
+		</div>
+	</section>
+</main>
+<footer class="bg-light py-3">
+	<div class="container text-center">
+		<p>&copy; 2023 Piotr Bródka Software Development. All rights reserved.</p>
+	</div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+</body>
+</html>
